2008-01-19  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokertable.py.in (PokerTableTestCase.setUp): Added
	option to change the settings XML string. 
	(PokerTableTestCaseWithPredefinedDecks): Created class to test
	predefined decks.
	Added settings_stripped_deck_xml variable.

2008-01-14  Loic Dachary <loic@dachary.org>

	* Release 1.3.0

	* tests/test-currencyclient.py.in: specify the test database so
	  that currency is not used by default
	* tests/test-currencyclient.py.in: use configure variables and
	  currencytest only
	* tests/Makefile.am: setupMysqlVariables is not a program
	* tests/Makefile.am: setupMysqlVariables must be in EXTRA_DIST
	* AUTHORS: Bradley in authors file
	* ChangeLog: move reversion up

2008-01-13  Bradley M. Kuhn  <bkuhn@ebb.org>

	* configure.ac: Added call to new macro, POKERNETWORK_AC_PROG_APG.

	* config/apg.m4: Created file.

	* debian/control (Build-Depends): Added apg, rsync.

	* tests/test-pokerbotlogic.py.in (NoteGeneratorTestCase.test_all):
	Used 'printf' instead of 'echo -e'.

	* tests/test-pokeravatar.py.in: Changed to use MYSQL_TEST_* variables.

	* tests/test-pokerclient.py.in: Changed to use MYSQL_TEST_* variables.

	* tests/test-currencyclient.py.in: Changed to use MYSQL_TEST_* variables.

	* tests/test-pokerservice.py.in: Changed to use MYSQL_TEST_* variables.

	* tests/test-webservice.py.in: Changed to use MYSQL_TEST_* variables.

	* tests/setupMysqlVariables: Changed variables to new MYSQL_TEST ones.

	* tests/Makefile.am: Changed variable exports related to databases
	to use the new test ones as below.

	* configure.ac (POKER_DBROOT_PASSWORD): Added variable.
	(MYSQL_TEST_DBHOST): Added variable.
	(POKER_DBROOT_PASSWORD): Added variable.

2008-01-12  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/Makefile.am: exported various variables so subprocesses,
	such as the tests, can find them.

	* tests/run.in: Now loads setupMysqlVariables.
	(TZ): Checked to see if it is empty before setting.
